# sqlserver-mcp

./: .gitignore  LICENSE  PYPI_SETUP.md  README.md  TODO.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/mssql_mcp/: __init__.py  server.py
src/sqlserver_mcp/: __init__.py  server.py
tests/: __init__.py  conftest.py  test_server.py
